tests/unit-fail-compilation/j020c-link1.c.ref
j020c-link1.c:4:3: error: Trying to convert an incomplete lvalue not of array type.
  Undefined behavior (UB-CEE5). See C11 sec. 6.3.2.1:2, J.2:1 item 20
Translation failed (config dumped). Run kcc -d j020c-link1.c j020c-link2.c to see commands run.
